--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
     <title>Online Zoo</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__content">
+                <div class="header__logo logo">
+                    <img src="img/header/logo_footer.svg" alt="logo">
+                </div>
+                <div class="header__nav nav">
+                    <nav class="navigation">
+                        <ul class="navigation_list">
+                            <li><a href="">About</a></li>
+                            <li><a href="">Map</a></li>
+                            <li><a href="">Zoos</a></li>
+                            <li><a href="pages/donate.html">Donate</a></li>
+                            <li><a href="">Contact us</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="header__designed designed">
+                    <span class="designed__label">Designed by ©</span>
+                </div>
+            </div>
+        </div>
+    </header>
     <script src="js/main.js"></script>
 </body>
 </html>
