--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <header class="header">
         <div class="container">
             <div class="header__content">
-                <div class="header__logo logo">
-                    <img src="img/header/logo_footer.svg" alt="logo">
-                </div>
                 <div class="header__nav nav">
+                    <div class="header__logo logo">
+                        <img src="img/header/logo_footer.svg" alt="logo">
+                    </div>
                     <nav class="navigation">
                         <ul class="navigation_list">
-                            <li><a href="">About</a></li>
-                            <li><a href="">Map</a></li>
-                            <li><a href="">Zoos</a></li>
-                            <li><a href="pages/donate.html">Donate</a></li>
-                            <li><a href="">Contact us</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Map</a></li>
+                            <li><a href="#">Zoos</a></li>
+                            <li><a href="pages/donate.html" target="_blank">Donate</a></li>
+                            <li><a href="#">Contact us</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="header__designed designed">
-                    <span class="designed__label">Designed by ©</span>
+                    <span class="designed__label"><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" target="_blank">Designed by ©</a></span>
                 </div>
             </div>
         </div>
