--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="header__content">
                 <div class="header__nav nav">
                     <div class="header__logo logo">
-                        <img src="img/header/logo_footer.svg" alt="logo">
+                        <img src="img/header/logo_footer.png" alt="logo">
                     </div>
                     <nav class="navigation">
                         <ul class="navigation_list">
