--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             <div class="header__content">
                 <div class="header__nav nav">
                     <div class="header__logo logo">
-                        <img src="img/header/logo_footer.png" alt="logo">
+                        <a href="index.html" title="About">
+                            <h1 class="logo__title">
+                                PetStory <span class="logo__bamboo"><img src="img/header/bamboo.svg" alt="">o</span>nline
+                            </h1>
+                        </a>
                     </div>
                     <nav class="navigation">
                         <ul class="navigation_list">
