feat: add burger menu for header

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
                 <div class="header__designed designed">
                     <span class="designed__label"><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" target="_blank">Designed by ©</a></span>
                 </div>
+                <div class="header__burger_menu burger_menu">
+                    <div class="burger_menu_block">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
