feat: add botton effect for watch sec

--- a/index.html
+++ b/index.html
@@ -42,6 +42,24 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="watch_online">
+            <div class="watch_online__content">
+                <div class="container">
+                    <div class="watch_online__block">
+                        <div class="watch_online__circle circle">
+                            <div class="circle__content">
+                                <h2 class="circle__title">
+                                    Watch your <span>favorite</span> animal online
+                                </h2>
+                                <button class="circle__button">watсh online</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="js/main.js"></script>
 </body>
 </html>
